--- a/web-page/index.html
+++ b/web-page/index.html
@@ -28,7 +28,7 @@
 
 <div class="  block md:flex md:flex-row-reverse ">
     <div class="">
-        <img src="/SRC/Images/My pix.jpg" alt="My pix.jpg" class="rounded-full mt-10 w-[170.86px] h-[170.86xp] mx-[5rem]  md:rounded-full md:w-[200px] md:h-[200px]">
+        <img src="./images/My pix.jpg" alt="My pix.jpg" class="rounded-full mt-10 w-[170.86px] h-[170.86xp] mx-[5rem]  md:rounded-full md:w-[200px] md:h-[200px]">
     </div>
 
     <div  class="items-center">
