cloning the portfolio page

--- a/web-page/index.html
+++ b/web-page/index.html
@@ -12,7 +12,7 @@
 <body>
 <header>
     <div class="md:hidden mt-10">
-        <img src="/SRC/Images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
+        <img src="./images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
     </div>
     <nav>
         <div class="hidden md:block">
