--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     </nav>
 </header>
 
-<div class="  block md:flex md:flex-row-reverse ">
-    <div class="">
+<div class="block md:flex md:flex-row-reverse ">
+    <div>
         <img src="./web-page/images/My pix.jpg" alt="My pix.jpg" class="rounded-full mt-10 w-[170.86px] h-[170.86xp] mx-[5rem]  md:rounded-full md:w-[200px] md:h-[200px]">
     </div>
 
