--- a/web-page/work.html
+++ b/web-page/work.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="md:hidden mt-10">
-            <img src="/SRC/Images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
+            <img src="./images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
         </div>
         <nav>
             <div class="hidden md:block">
@@ -34,7 +34,7 @@
         <div class="block md:flex">
 
             <div class=" mx-12 w-[339px] h-[230px] mt-5 md:w-[446px] md:h-[180px] md:mt-10  ">
-                <img src="/SRC/Images/Rectangle 30.png" alt="Rectangle 30.png">
+                <img src="./images/Rectangle 30.png" alt="Rectangle 30.png">
             </div>
             <div class="mx-6 md:mx-0 ">
                 <h3 class=" text-[24px] w-[254px]   h-[30px] font-bold md:text-[30px] md:font-bold md:w-[335px] md:h-[44px] md:mt-5" >Designing Dashboards</h3>
@@ -51,7 +51,7 @@
             <div class="flex">
 
                 <div class=" mx-12 w-[339px] h-[230px] mt-5 md:w-[446px] md:h-[180px] md:mt-10  ">
-                    <img src="/SRC/Images/Rectangle 32.png" alt="Rectangle 32.png">
+                    <img src="./images/Rectangle 32.png" alt="Rectangle 32.png">
                 </div>
                 <div class="mx-6 md:mx-0 ">
                     <h3 class=" text-[28px] font-bold w-[337px] h-[44px] mt-5" >Vibrant Portraits of 2020</h3>
@@ -71,7 +71,7 @@
             <div class="flex">
 
                 <div class=" mx-12 w-[339px] h-[230px] mt-5 md:w-[446px] md:h-[180px] md:mt-10  ">
-                    <img src="/SRC/Images/Rectangle 34.png" alt="Rectangle 34.png">
+                    <img src="./images/Rectangle 34.png" alt="Rectangle 34.png">
                 </div>
                 <div class="mx-6 md:mx-0 ">
                     <h3 class=" text-[28px] font-bold w-[337px] h-[44px] mt-5" >36 Days of Malayalam type</h3>
@@ -92,7 +92,7 @@
             <div class="flex">
 
                 <div class=" mx-12 w-[339px] h-[230px] mt-5 md:w-[446px] md:h-[180px] md:mt-10  ">
-                    <img src="/SRC/Images/Rectangle 40.png" alt="Rectangle 40.png">
+                    <img src="./images/Rectangle 40.png" alt="Rectangle 40.png">
                 </div>
                 <div class="mx-6 md:mx-0 ">
                     <h3 class=" text-[28px] font-bold w-[173px] h-[44px] mt-5" >Components</h3>
@@ -109,7 +109,7 @@
 
 
         <div class="block md:hidden  mt-[10rem]">
-            <img src="/SRC/Images/work-list-mobile (1).png" alt="work-list-mobile.png">
+            <img src="./images/work-list-mobile (1).png" alt="work-list-mobile.png">
         </div>
 
         
@@ -120,22 +120,10 @@
 
 
 
-
-
-
-
-        
-
-
-
-
-
-
-
     </div>
     <footer>
         <div class=" mt-5 w-[357px] h-[182px] md:w-full md:h-[182px] md:mt-10 ">
-            <img src="/SRC/Images/Footer (3).png" alt="Footer (3).png" class="mx-5 md:mx-[20rem]">
+            <img src="./images/Footer (3).png" alt="Footer (3).png" class="mx-5 md:mx-[20rem]">
         </div>
     </footer>
 
