--- a/web-page/blog.html
+++ b/web-page/blog.html
@@ -13,7 +13,7 @@
 
     <header>
         <div class="md:hidden mt-10">
-            <img src="/SRC/Images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
+            <img src="./images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
         </div>
         <nav>
             <div class="hidden md:block">
@@ -78,7 +78,7 @@
 
         <footer>
             <div class="w-[375px] h-[182px]  mt-[12rem] content-center md:w-full md:h-[182px] md:content-center md:mt-[15rem] md:mx-[12rem]">
-                <img src="/SRC/Images/Footer (3).png" alt=" Footer (3).png">
+                <img src="./images/Footer (3).png" alt=" Footer (3).png">
             </div>
            
         </footer>
