--- a/web-page/contact.html
+++ b/web-page/contact.html
@@ -12,7 +12,7 @@
 <body>
     <header class="w-[375px] h-[50px] md:w-full">
         <div class="md:hidden mt-10 mr-10">
-            <img src="/SRC/Images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
+            <img src="./images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
         </div>
         <nav>
             <div class="hidden md:block">
@@ -45,7 +45,7 @@
 
 
         <div class="w-[339px] h-[256px] mt-5  md:mt-[5rem] md:w-[681px] md:h-[460px]">
-            <img src="/SRC/Images/Rectangle 4.png" alt="Rectangle 4.png" >
+            <img src="./images/Rectangle 4.png" alt="Rectangle 4.png" >
 
         </div>
 
@@ -62,11 +62,11 @@
         </div>
 
         <div class="w-[339px] h-[256px] mx-5  md:mx-[10rem] mt-3 md:w-[681px] md:h-[460px] md:mt-3">
-            <img src="/SRC/Images/Rectangle 5.png" alt="Rectangle 5.png">
+            <img src="./images/Rectangle 5.png" alt="Rectangle 5.png">
         </div>
 
         <div class="w-[339px] h-[257px] mx-5  md:mx-[10rem] mt-3 md:w-[681px] md:h-[460px] md:mt-3">
-            <img src="/SRC/Images/Rectangle 6.png" alt="Rectangle 6.png">
+            <img src="./images/Rectangle 6.png" alt="Rectangle 6.png">
         </div>
 
 
@@ -77,7 +77,7 @@
 
     <footer>
         <div class="w-[375px] h-[182px]  mt-[5rem] content-center md:w-full md:h-[182px] md:content-center md:mt-[5rem] md:mx-[12rem]">
-            <img src="/SRC/Images/Footer (3).png" alt=" Footer (3).png">
+            <img src="./images/Footer (3).png" alt=" Footer (3).png">
         </div>
        
     </footer>
