--- a/web-page/index.html
+++ b/web-page/index.html
@@ -17,16 +17,16 @@
     <nav>
         <div class="hidden md:block">
             <ul class="flex gap-4 mx-[40rem] mt-10 text-[20px font-medium]">
-                <li><a href="http://127.0.0.1:5500/SRC/work.html" class="hover:underline decoration-blue-500">Works</a></li>
-                <li><a href="http://127.0.0.1:5500/SRC/Blog.html" class="hover:underline decoration-blue-500">Blogs</a></li>
-                <li><a href="http://127.0.0.1:5500/SRC/contact.html" class="hover:underline decoration-blue-500">Contact</a></li>
+                <li><a href="./work.html" class="hover:underline decoration-blue-500">Works</a></li>
+                <li><a href="./blog.html" class="hover:underline decoration-blue-500">Blogs</a></li>
+                <li><a href="./contact.html" class="hover:underline decoration-blue-500">Contact</a></li>
                 
             </ul>
         </div>
     </nav>
 </header>
 
-<div class="  block md:flex md:flex-row-reverse ">
+<div class="  block md:flex md:flex-row-reverse  ">
     <div class="">
         <img src="./images/My pix.jpg" alt="My pix.jpg" class="rounded-full mt-10 w-[170.86px] h-[170.86xp] mx-[5rem]  md:rounded-full md:w-[200px] md:h-[200px]">
     </div>
