update 7th june 2024

--- a/web-page/index.html
+++ b/web-page/index.html
@@ -15,8 +15,8 @@
         <img src="./images/Mobile-Header (2).png" alt="Mobile-Header (2).png">
     </div>
     <nav>
-        <div class="hidden md:block">
-            <ul class="flex gap-4 mx-[40rem] mt-10 text-[20px font-medium]">
+        <div class="hidden md:block ">
+            <ul class="flex gap-4 mx-[40rem] text-[#000000] font-medium  text-[20px] mt-10 text-[20px font-medium]">
                 <li><a href="./work.html" class="hover:underline decoration-blue-500">Works</a></li>
                 <li><a href="./blog.html" class="hover:underline decoration-blue-500">Blogs</a></li>
                 <li><a href="./contact.html" class="hover:underline decoration-blue-500">Contact</a></li>
