--- a/web-page/contact.html
+++ b/web-page/contact.html
@@ -6,7 +6,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Heebo:wght@100..900&display=swap');
         </style>
-    <link href="./output.css" rel="stylesheet">
+    <link href="./styles/output.css" rel="stylesheet">
     <title>contact page</title>
 </head>
 <body>
